--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -645,7 +645,6 @@ allow 194.26.192.161;
 allow 194.26.192.72;
 allow 194.26.192.77;
 allow 194.26.192.97;
-allow 194.87.115.187;
 allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
@@ -821,6 +820,7 @@ allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
+allow 209.135.168.90;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
@@ -860,6 +860,7 @@ allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
+allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -917,6 +918,7 @@ allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
+allow 2602:f9f3:0:2::319;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
@@ -1093,7 +1095,6 @@ allow 2a03:4000:6:614:d803:40ff:fec3:832a;
 allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
-allow 2a03:6f02::5366;
 allow 2a03:6f20:531::254;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
@@ -1361,6 +1362,7 @@ allow 2a0d:bbc7:0:1::394;
 allow 2a0d:bbc7:0:1::3bd;
 allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
+allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
 allow 2a0e:4005:1002:ffff:185:40:4:127;
@@ -1517,6 +1519,10 @@ allow 45.61.188.15;
 allow 45.66.35.20;
 allow 45.66.35.21;
 allow 45.66.35.22;
+allow 45.66.35.31;
+allow 45.66.35.32;
+allow 45.66.35.33;
+allow 45.66.35.34;
 allow 45.66.35.35;
 allow 45.78.44.215;
 allow 45.79.144.222;
@@ -1563,7 +1569,6 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.102.89;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1653,6 +1658,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.147.108.63;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
@@ -1683,6 +1689,7 @@ allow 91.92.109.43;
 allow 92.223.2.52;
 allow 92.243.24.163;
 allow 92.246.138.145;
+allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.185.165.211;
 allow 93.95.228.125;
