--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -645,7 +645,6 @@ deny 194.26.192.161;
 deny 194.26.192.72;
 deny 194.26.192.77;
 deny 194.26.192.97;
-deny 194.87.115.187;
 deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
@@ -821,6 +820,7 @@ deny 205.185.123.93;
 deny 205.185.124.176;
 deny 205.185.124.193;
 deny 205.185.127.231;
+deny 209.135.168.90;
 deny 209.141.32.181;
 deny 209.141.32.198;
 deny 209.141.37.94;
@@ -860,6 +860,7 @@ deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
+deny 23.154.177.14;
 deny 23.154.177.15;
 deny 23.154.177.16;
 deny 23.154.177.17;
@@ -917,6 +918,7 @@ deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
+deny 2602:f9f3:0:2::319;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
@@ -1093,7 +1095,6 @@ deny 2a03:4000:6:614:d803:40ff:fec3:832a;
 deny 2a03:4000:66:15:18a0:6bff:fe90:3147;
 deny 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 deny 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
-deny 2a03:6f02::5366;
 deny 2a03:6f20:531::254;
 deny 2a03:e600:100::1;
 deny 2a03:e600:100::2;
@@ -1361,6 +1362,7 @@ deny 2a0d:bbc7:0:1::394;
 deny 2a0d:bbc7:0:1::3bd;
 deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
+deny 2a0d:c2c0:1:4::2;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
 deny 2a0e:4005:1002:ffff:185:40:4:127;
@@ -1517,6 +1519,10 @@ deny 45.61.188.15;
 deny 45.66.35.20;
 deny 45.66.35.21;
 deny 45.66.35.22;
+deny 45.66.35.31;
+deny 45.66.35.32;
+deny 45.66.35.33;
+deny 45.66.35.34;
 deny 45.66.35.35;
 deny 45.78.44.215;
 deny 45.79.144.222;
@@ -1563,7 +1569,6 @@ deny 5.181.80.107;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.102.89;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1653,6 +1658,7 @@ deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
 deny 88.80.26.4;
+deny 89.147.108.63;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
@@ -1683,6 +1689,7 @@ deny 91.92.109.43;
 deny 92.223.2.52;
 deny 92.243.24.163;
 deny 92.246.138.145;
+deny 92.246.84.133;
 deny 93.123.12.112;
 deny 93.185.165.211;
 deny 93.95.228.125;
