--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -135,6 +135,9 @@ allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:18:f84a::1;
+allow 2602:fc24:19:1c9::1;
+allow 2602:fc24:19:2b4::1;
+allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
@@ -269,6 +272,7 @@ allow 2a02:c206:2239:9861::1;
 allow 2a02:c206:2240:3516::1;
 allow 2a02:c206:2240:5051::1;
 allow 2a02:c206:2240:5054::1;
+allow 2a02:c206:2240:5264::1;
 allow 2a02:c206:2240:8448::1;
 allow 2a02:c206:2241:2588::1;
 allow 2a02:c207:3002:8283::1;
