--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -297,6 +297,7 @@ deny 185.183.159.40;
 deny 185.191.204.254;
 deny 185.193.52.180;
 deny 185.194.143.232;
+deny 185.195.236.55;
 deny 185.195.71.244;
 deny 185.207.107.130;
 deny 185.207.107.216;
@@ -837,6 +838,7 @@ deny 209.141.46.203;
 deny 209.141.51.180;
 deny 209.141.51.30;
 deny 209.141.54.203;
+deny 209.141.54.218;
 deny 209.141.55.26;
 deny 209.141.60.219;
 deny 209.141.61.52;
@@ -857,14 +859,19 @@ deny 23.129.64.173;
 deny 23.137.248.100;
 deny 23.137.248.192;
 deny 23.137.250.83;
+deny 23.137.253.108;
 deny 23.137.253.109;
 deny 23.137.253.110;
+deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.137;
 deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.154.177.10;
+deny 23.154.177.11;
 deny 23.154.177.12;
+deny 23.154.177.13;
+deny 23.154.177.14;
 deny 23.154.177.15;
 deny 23.154.177.16;
 deny 23.154.177.17;
@@ -888,6 +895,7 @@ deny 23.154.177.4;
 deny 23.154.177.5;
 deny 23.154.177.6;
 deny 23.154.177.7;
+deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.8.104;
 deny 23.184.48.254;
@@ -929,6 +937,8 @@ deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:18:f84a::1;
 deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
+deny 2602:fc24:19:30::1;
+deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
@@ -1116,6 +1126,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:123:c6c3::1;
@@ -1161,6 +1172,7 @@ deny 2a09:61c0::20;
 deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
+deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:4140:6c6c::2;
 deny 2a0b:f4c0:16c:10::1;
@@ -1377,6 +1389,7 @@ deny 2a0e:4005:1002:ffff:185:40:4:92;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:e701:1198::1;
+deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:9400:7e11:8e09::1;
 deny 2a0f:df00:0:255::194;
@@ -1533,6 +1546,7 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
+deny 45.83.21.193;
 deny 45.84.107.101;
 deny 45.84.107.172;
 deny 45.84.107.182;
@@ -1571,6 +1585,7 @@ deny 5.181.80.107;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.102.89;
 deny 5.255.103.235;
 deny 5.255.104.202;
