--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -544,13 +544,11 @@ allow 190.120.229.98;
 allow 190.211.254.97;
 allow 192.108.48.150;
 allow 192.210.160.31;
-allow 192.210.160.35;
 allow 192.210.214.10;
 allow 192.210.255.47;
 allow 192.3.141.157;
 allow 192.3.173.79;
 allow 192.3.228.229;
-allow 192.3.241.151;
 allow 192.42.116.13;
 allow 192.42.116.14;
 allow 192.42.116.15;
@@ -862,13 +860,13 @@ allow 23.137.253.109;
 allow 23.137.253.110;
 allow 23.137.253.254;
 allow 23.137.253.27;
-allow 23.137.254.137;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
+allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -926,7 +924,6 @@ allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
-allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
@@ -1121,6 +1118,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:98a3::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1580,6 +1578,7 @@ allow 51.81.33.188;
 allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
+allow 5.255.100.219;
 allow 5.255.100.227;
 allow 5.255.102.89;
 allow 5.255.103.235;
